<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/order"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/asal_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/tujuan_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asal_spinner" />

    <Spinner
        android:id="@+id/class_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tujuan_spinner" />

    <EditText
        android:id="@+id/orderdate_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/order_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_spinner"
        />

    <HorizontalScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderdate_input">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pkg_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pkg_button1"
                android:background="@drawable/pkgbutton_selector"
                />

            <Button
                android:id="@+id/pkg_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pkg_button2"
                android:background="@drawable/pkgbutton_selector"/>

            <Button
                android:id="@+id/pkg_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pkg_button3"
                android:background="@drawable/pkgbutton_selector"/>

            <Button
                android:id="@+id/pkg_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pkg_button4"
                android:background="@drawable/pkgbutton_selector"/>

            <Button
                android:id="@+id/pkg_button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pkg_button5"
                android:background="@drawable/pkgbutton_selector"/>

            <Button
                android:id="@+id/pkg_button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pkg_button6"
                android:background="@drawable/pkgbutton_selector"/>

            <Button
                android:id="@+id/pkg_button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pkg_button7"
                android:background="@drawable/pkgbutton_selector"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/price"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/price_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/price_amount"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_amount"
        android:text="@string/order_now"
        android:fontFamily="@font/poppins_semibold"/>





    

</androidx.constraintlayout.widget.ConstraintLayout>