<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="30dp"
    android:elevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewOrigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Asal          ->        Tujuan"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18dp"
            android:textColor="@color/soft_black" />

        <TextView
            android:id="@+id/textViewTrainClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Kelas Kereta"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/textViewOrigin"
            app:layout_constraintTop_toBottomOf="@id/textViewOrigin" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="18dp">

                <Button
                    android:id="@+id/pkg_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button"
                    android:clickable="false"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/pkg_button1"
                    android:textColor="@color/not_white"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/pkg_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button"
                    android:clickable="false"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/pkg_button2"
                    android:textColor="@color/not_white"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/pkg_button3"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button"
                    android:clickable="false"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/pkg_button3"
                    android:textColor="@color/not_white"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/pkg_button4"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button"
                    android:clickable="false"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/pkg_button4"
                    android:textColor="@color/not_white"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/pkg_button5"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button"
                    android:clickable="false"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/pkg_button5"
                    android:textColor="@color/not_white"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/pkg_button6"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button"
                    android:clickable="false"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/pkg_button6"
                    android:textColor="@color/not_white"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/pkg_button7"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button"
                    android:clickable="false"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/pkg_button7"
                    android:textColor="@color/not_white"
                    android:textSize="10sp" />
            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

</androidx.cardview.widget.CardView>
